--- a/StudentApp/pom.xml
+++ b/StudentApp/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>in.akash</groupId>
-  <artifactId>DockerWebApp</artifactId>
+  <artifactId>StudentApp</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>DockerWebApp Maven Webapp</name>
+  <name>StudentApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -16,6 +16,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>dockerWebApp</finalName>
+    <finalName>StudentApp</finalName>
   </build>
 </project>
