--- a/StudentApp/pom.xml
+++ b/StudentApp/pom.xml
@@ -44,6 +44,22 @@
 	
 	<build>
 		<finalName>StudentApp</finalName>
+		<resources>
+			<resource>
+				<filtering>false</filtering>
+				<directory>src/main/resources</directory>
+			</resource>
+			<resource>
+				<filtering>false</filtering>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**</include>
+				</includes>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</resource>
+		</resources>
 	</build>
 	
 </project>
