--- a/StudentApp/pom.xml
+++ b/StudentApp/pom.xml
@@ -82,6 +82,13 @@
             <artifactId>jboss-annotations-api_1.1_spec</artifactId>
             <scope>provided</scope>
         </dependency>
+        
+        <!-- INFINISPAN DEPENDENCIES -->
+        <dependency>
+	      <groupId>org.infinispan</groupId>
+	      <artifactId>infinispan-core</artifactId>
+	      <version>9.1.0.Final</version>
+	    </dependency>
 
 	</dependencies>
 	
